--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/public/images/logo_bartolome_de_medina-bg.ico" />
+  <link rel="icon" href="/images/logo_bartolome_de_medina-bg.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,8 +17,13 @@
 </head>
 
 <body>
+
+
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+  <script async defer crossorigin="anonymous"
+    src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v19.0&appId=491826195888874"
+    nonce="ZmEwIJMO"></script>
 </body>
 
 </html>
