Se agrego la libreria de npm react-social-media-embed se quiere obtener posts de manera dimaica

--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
 
 
   <div id="root"></div>
+  <div id="fb-root"></div>
+
   <script type="module" src="/src/main.tsx"></script>
   <script async defer crossorigin="anonymous"
-    src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v19.0&appId=491826195888874"
-    nonce="ZmEwIJMO"></script>
+    src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v19.0&appId=491826195888874"
+    nonce="8IQA6XKn"></script>
 </body>
 
 </html>
