se agregaron mas seccciones

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="description"
+    content=" Bienvenido al Colegio Bartolomé de Medina, donde cada niño encuentra un espacio para crecer, aprender y alcanzar su máximo potencial. Nuestra institución está dedicada a brindar una educación integral y de calidad que combine la excelencia académica con el desarrollo personal y emocional de nuestros estudiantes.">
+  <meta name="keywords"
+    content="Colegio Bartolome De Medina, Colegio Bartolomé De Medina, Colegio, Zacualtipan, Colegio Zacualtipan, Zacualtipán,Colegio Privado Zacualtipan, Colegio Privado Zacualtipán ">
+  <meta name="robots" content="index, follow">
   <link rel="icon" href="/images/logo_bartolome_de_medina-bg.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,19 +18,15 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Work+Sans:wght@300;400;500;700&display=swap"
     rel="stylesheet">
-  <title>Colegio Bartolome De Medina</title>
+  <title>Colegio Bartolomé De Medina</title>
 </head>
 
 <body>
 
 
   <div id="root"></div>
-  <div id="fb-root"></div>
-
   <script type="module" src="/src/main.tsx"></script>
-  <script async defer crossorigin="anonymous"
-    src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v19.0&appId=491826195888874"
-    nonce="8IQA6XKn"></script>
+
 </body>
 
 </html>
